'code' reviewed