@@ -16,9 +16,7 @@ public class ResultsProcessorTest {
     @Test
     public void testEmptyResultsCollection() {
         // Проверяем, что конструктор выбрасывает исключение при передаче пустой коллекции
-        assertThrows(IllegalArgumentException.class, () -> {
-            new ResultsProcessor(Collections.emptyList());
-        });
+        assertThrows(IllegalArgumentException.class, () -> new ResultsProcessor(Collections.emptyList()));
     }
 
     @Test
@@ -32,27 +30,15 @@ public class ResultsProcessorTest {
         ResultsProcessor processor = new ResultsProcessor(results);
 
         // Проверяем, что метод getFastest выбрасывает исключение при limit <= 0
-        assertThrows(IllegalArgumentException.class, () -> {
-            processor.getFastest(Gender.MALE, Distance.TEN_KM, 0);
-        });
+        assertThrows(IllegalArgumentException.class, () -> processor.getFastest(Gender.MALE, Distance.TEN_KM, 0));
 
-        assertThrows(IllegalArgumentException.class, () -> {
-            processor.getFastest(Gender.MALE, Distance.TEN_KM, -1);
-        });
+        assertThrows(IllegalArgumentException.class, () -> processor.getFastest(Gender.MALE, Distance.TEN_KM, -1));
     }
 
     @Test
     public void testGetFastest() {
         // Создаем коллекцию с результатами
-        List<Result> results = List.of(
-                new Result(new Person("John Smith", Gender.MALE), Distance.TEN_KM, Duration.ofSeconds(30 * 60 + 29)),
-                new Result(new Person("Jane Doe", Gender.FEMALE), Distance.TEN_KM, Duration.ofSeconds(31 * 60 + 15)),
-                new Result(new Person("Alex Brown", Gender.MALE), Distance.TEN_KM, Duration.ofSeconds(29 * 60 + 50)),
-                new Result(new Person("Emily White", Gender.FEMALE), Distance.TEN_KM, Duration.ofSeconds(30 * 60 + 45))
-        );
-
-        // Создаем ResultsProcessor
-        ResultsProcessor processor = new ResultsProcessor(results);
+        final var processor = getResultsProcessor();
 
         // Получаем 2 самых быстрых мужчин на 10 км
         List<Result> fastestMen = processor.getFastest(Gender.MALE, Distance.TEN_KM, 2);
@@ -67,6 +53,18 @@ public class ResultsProcessorTest {
 
         // Проверяем результат
         assertEquals(1, fastestWomen.size());
-        assertEquals("Emily White", fastestWomen.get(0).person().name());
+        assertEquals("Emily White", fastestWomen.getFirst().person().name());
+    }
+
+    private static ResultsProcessor getResultsProcessor() {
+        List<Result> results = List.of(
+                new Result(new Person("John Smith", Gender.MALE), Distance.TEN_KM, Duration.ofSeconds(30 * 60 + 29)),
+                new Result(new Person("Jane Doe", Gender.FEMALE), Distance.TEN_KM, Duration.ofSeconds(31 * 60 + 15)),
+                new Result(new Person("Alex Brown", Gender.MALE), Distance.TEN_KM, Duration.ofSeconds(29 * 60 + 50)),
+                new Result(new Person("Emily White", Gender.FEMALE), Distance.TEN_KM, Duration.ofSeconds(30 * 60 + 45))
+        );
+
+        // Создаем ResultsProcessor
+        return new ResultsProcessor(results);
     }
 }
